<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.MenuFragment"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_series"
            android:text="@string/movies"
            android:textSize="@dimen/button_txt_size"
            />
        <Button
            android:id="@+id/btn_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_movies"
            app:layout_constraintEnd_toStartOf="@id/btn_watchlater"
            android:text="@string/series"
            android:textSize="@dimen/button_txt_size"
            />
        <Button
            android:id="@+id/btn_watchlater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_series"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/watch_later"
            android:textSize="@dimen/button_txt_size"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_watchlater"
            android:layout_margin="14dp"
            android:src="@drawable/magnifying_glass"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>